--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -101,7 +101,7 @@ beacon.beam.depth=true
 
 #Custom Texture
 texture.composite.depthtex2=tex/dirt.png
-texture.noise=tex/noise.png
+texture.noise=tex/noises.png
 
 #Custom Time Uniform
 variable.float.tAmin=frac(sunAngle - 0.033333333)
