--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -99,6 +99,33 @@ alphaTest.gbuffers_weather=GREATER 0.0001
 #Enable Beacon Beam Depth
 beacon.beam.depth=true
 
+#From Chocapic/Loop
+variable.float.texelSizeX = 1.0/viewWidth
+variable.float.texelSizeY = 1.0/viewHeight
+uniform.vec2.invWidthHeight = vec2(1.0 / viewWidth, 1.0 / viewHeight)
+uniform.vec2.texelSize=vec2(texelSizeX,texelSizeY)
+
+uniform.int.framemod8 = frameCounter%8
+
+variable.float.normSunVec = sqrt(sunPosition.x*sunPosition.x+sunPosition.y*sunPosition.y+sunPosition.z*sunPosition.z)
+variable.float.normUpVec = sqrt(upPosition.x*upPosition.x+upPosition.y*upPosition.y+upPosition.z*upPosition.z)
+
+variable.float.sunPosX = sunPosition.x/normSunVec
+variable.float.sunPosY = sunPosition.y/normSunVec
+variable.float.sunPosZ = sunPosition.z/normSunVec
+
+uniform.vec3.sunVec=vec3(sunPosX,sunPosY,sunPosZ)
+
+variable.float.upPosX = upPosition.x/normUpVec
+variable.float.upPosY = upPosition.y/normUpVec
+variable.float.upPosZ = upPosition.z/normUpVec
+
+uniform.vec3.upVec=vec3(upPosX,upPosY,upPosZ)
+uniform.float.sunElevation = sunPosX*upPosX+sunPosY*upPosY+sunPosZ*upPosZ
+uniform.float.lightSign = clamp(sunElevation * 1000000000000000000, 0.0, 1.0) * 2.0 - 1.0
+
+
+
 #Custom Texture
 texture.composite.depthtex2=tex/dirt.png
 texture.noise=tex/noises.png
